Can't select vertex when there are doubles #60139

Closed
opened 2019-01-04 02:21:17 +01:00 by Jonathan Ramos · 7 comments

System Information
Operating system: Windows 10
Graphics card: Gtx 1050 TI

Blender Version
Broken: Blender-2.80.0-git.11f2c65128dc-windows64
Worked: Blender 2.79

Short description of error

Exact steps for others to reproduce the error
1 - Extrude one vertex with "E" and confirm "RMB Click";
2 - Try to select the vertex created.

**System Information** Operating system: Windows 10 Graphics card: Gtx 1050 TI **Blender Version** Broken: Blender-2.80.0-git.11f2c65128dc-windows64 Worked: Blender 2.79 **Short description of error** **Exact steps for others to reproduce the error** 1 - Extrude one vertex with "E" and confirm "RMB Click"; 2 - Try to select the vertex created.
Author

Added subscriber: @jonramos

Added subscriber: @jonramos

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Hmm, the vertex is actually selected . But the issue is that we don't have visual feedback (the vertex turns black and the selection tools lack the gizmos, so no way to know). But if you switch temporary to the move tool you'll see the gizmo there.

Hmm, the vertex is actually selected . But the issue is that we don't have visual feedback (the vertex turns black and the selection tools lack the gizmos, so no way to know). But if you switch temporary to the move tool you'll see the gizmo there.

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Clément Foucault was assigned by Campbell Barton 2019-01-04 06:50:17 +01:00

The offset for selected/active vertices seems too low, applying this patch helps but unselected verts still occlude when they shouldn't.

Noticed the fast drawing while navigating seems not to have this problem.

diff --git a/source/blender/draw/modes/shaders/edit_mesh_overlay_points_vert.glsl b/source/blender/draw/modes/shaders/edit_mesh_overlay_points_vert.glsl
index 245cbab92d5..233ec5e184c 100644
--- a/source/blender/draw/modes/shaders/edit_mesh_overlay_points_vert.glsl
+++ b/source/blender/draw/modes/shaders/edit_mesh_overlay_points_vert.glsl
@@ -25,10 +25,10 @@ void main()

    /* Make selected and active vertex always on top. */
    if ((data.x & VERTEX_SELECTED) != 0) {
-       gl_Position.z -= 1e-7;
+       gl_Position.z -= 1e-4;
    }
    if ((data.x & VERTEX_ACTIVE) != 0) {
-       gl_Position.z -= 1e-7;
+       gl_Position.z -= 1e-4;
    }

 #ifdef VERTEX_FACING
The offset for selected/active vertices seems too low, applying this patch helps but unselected verts still occlude when they shouldn't. Noticed the fast drawing while navigating seems not to have this problem. ``` diff --git a/source/blender/draw/modes/shaders/edit_mesh_overlay_points_vert.glsl b/source/blender/draw/modes/shaders/edit_mesh_overlay_points_vert.glsl index 245cbab92d5..233ec5e184c 100644 --- a/source/blender/draw/modes/shaders/edit_mesh_overlay_points_vert.glsl +++ b/source/blender/draw/modes/shaders/edit_mesh_overlay_points_vert.glsl @@ -25,10 +25,10 @@ void main() /* Make selected and active vertex always on top. */ if ((data.x & VERTEX_SELECTED) != 0) { - gl_Position.z -= 1e-7; + gl_Position.z -= 1e-4; } if ((data.x & VERTEX_ACTIVE) != 0) { - gl_Position.z -= 1e-7; + gl_Position.z -= 1e-4; } #ifdef VERTEX_FACING ```

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This was fixed at some point when refactoring the edit mode drawing.

This was fixed at some point when refactoring the edit mode drawing.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60139
No description provided.